# linear-hs

./: COPYING  Setup.lhs  linear-hs.cabal
src/Math/: LinearAlgebra.hs
src/Numeric/: Matrix.hs  Vector.hs
test/: Main.hs
test/Test/: Matrix.hs  Vector.hs
