name: linear-hs
version: 0.1
license: BSD3
license-file: COPYING
synopsis: A linear algebra library.
category: Math
build-type: Simple
maintainer: Christopher Reichert <creichert07@gmail.com>
cabal-version: >= 1.2.3


Library
    hs-source-dirs: src
    extensions: NoMonomorphismRestriction
    exposed-modules: Numeric.Vector,
                     Numeric.Matrix,
                     Math.LinearAlgebra
    build-depends: base

Executable linear-hs-tests
    hs-source-dirs: src, test
    main-is: Main.hs
    extensions: NoMonomorphismRestriction
    other-modules: Test.Vector,
                   Numeric.Vector,
                   Math.LinearAlgebra
    build-depends: base, QuickCheck >= 2.1, HUnit
